Refactor and complete code

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -13,7 +13,7 @@
     </svg>
   </div>
   <div class="text-light select-none">
-    You are visible as <span class="font-bold">{{ name }}</span>
+    You are visible as <span class="font-bold">{{ escapeHtml(name) }}</span>
   </div>
   <div class="text-center text-brand select-none">
     You can now be discovered by other clients
