--- a/src/app/modules/main/ip-page/ip-page.component.html
+++ b/src/app/modules/main/ip-page/ip-page.component.html
@@ -1,12 +1,12 @@
-<div *ngIf="!isLoading else loading">
-  <div *ngIf="!isNearbyExisting" class="text-light">No nearby identities</div>
+<div *ngIf="!loading else showLoading">
+  <div *ngIf="!nearbyExisting" class="text-light">No nearby identities</div>
   <div class="w-full flex flex-row flex-wrap justify-center gap-12">
     <div *ngFor="let nearbyIdentity of nearbyIdentities">
       <app-nearby-identity [name]="nearbyIdentity.name" [distance]="nearbyIdentity.distance"></app-nearby-identity>
     </div>
   </div>
 </div>
-<ng-template #loading>
+<ng-template #showLoading>
   <app-loading size="large">Loading</app-loading>
 </ng-template>
 <app-modal></app-modal>
