--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,7 +5,7 @@
     </div>
     <button class="absolute right-0 text-light" (click)="toggleInboxModal($event)">
       <div class="relative">
-        <div *ngIf="unreadSendings" class="absolute -bottom-1 -right-1 w-2.5 h-2.5 rounded-full bg-orange-500"></div>
+        <div *ngIf="unreadTransmissions" class="absolute -bottom-1 -right-1 w-2.5 h-2.5 rounded-full bg-orange-500"></div>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
@@ -30,11 +30,19 @@
   <div class="w-full flex flex-col items-center gap-4 pb-12 text-light">
     <div class="w-full max-h-[60vh] overflow-y-auto flex flex-col items-center gap-4">
       <div *ngIf="inbox.length < 1" class="text-white">Your inbox is empty</div>
-      <div *ngFor="let sending of inbox" class="w-full">
+      <div *ngFor="let transmission of inbox" class="w-full">
         <div class="w-full flex flex-col gap-2 rounded-2xl p-4 bg-dark-300">
-          <div class="text-xs font-bold text-brand">{{ sending.fromName }}</div>
-          <div class="break-words text-light">{{ sending.message || sending.fileOriginalName }}</div>
-          <div class="text-sm text-basic">{{ sending.receivedAt?.toLocaleTimeString() }}</div>
+          <div class="text-xs font-bold text-brand">{{ escapeHtml(transmission.fromName) }}</div>
+          <div
+            class="break-words"
+            [ngClass]="{
+              'text-light': transmission.message,
+              'text-basic-300': !transmission.message
+            }"
+          >
+            {{ transmission.message ? escapeHtml(transmission.message!) : escapeHtml(transmission.fileOriginalName!) }}
+          </div>
+          <div class="text-sm text-basic">{{ transmission.receivedAt?.toLocaleTimeString() }}</div>
         </div>
       </div>
     </div>
