--- a/src/app/shared/components/file-input/file-input.component.html
+++ b/src/app/shared/components/file-input/file-input.component.html
@@ -54,7 +54,7 @@
 <input
   [id]="id"
   [(ngModel)]="value"
-  (change)="inputChange($event)"
+  (change)="onInputChange($event)"
   type="file"
   [name]="name"
   class="hidden"
