--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -2,7 +2,7 @@
   <input
     [id]="id"
     [(ngModel)]="value"
-    (input)="onInputChange.emit(value)"
+    (input)="inputChange.emit(value)"
     (blur)="validate()"
     [type]="inputType"
     [placeholder]="placeholder"
