--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,6 +1,6 @@
 <button 
   type="button"
-  (click)="onButtonClick($event)"
+  (click)="buttonClick.emit($event)"
   class="relative flex items-center justify-center rounded-full font-medium text-light cursor-pointer select-none transition-colors ease-in-out duration-200"
   [ngClass]="{
     'px-3 py-2': (size === 'extra-small') && padding,
@@ -19,6 +19,7 @@
     'bg-dark-300 hover:bg-dark-300': loading,
     'cursor-not-allowed': disabled || loading
   }"
+  [disabled]="disabled || loading"
 >
   <svg *ngIf="loading"
     role="status"
