--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -6,9 +6,9 @@
         <div class="w-full flex flex-col items-center gap-4 pt-3 mb-8">
           <div class="w-16 h-1 rounded-full bg-light"></div>
           <div class="relative w-full flex flex-row justify-center items-center">
-            <button (click)="onLeftButtonClick($event)" class="absolute left-0 text-brand select-none">{{ escapeHtml(leftButton) }}</button>
-            <div class="font-bold text-light">{{ escapeHtml(title) }}</div>
-            <button (click)="onRightButtonClick($event)" class="absolute right-0 text-brand select-none">{{ escapeHtml(rightButton) }}</button>
+            <button (click)="leftButton.emit($event)" class="absolute left-0 text-brand select-none">{{ leftButtonLabel }}</button>
+            <div class="font-bold text-light">{{ title }}</div>
+            <button (click)="rightButton.emit($event)" class="absolute right-0 text-brand select-none">{{ rightButtonLabel }}</button>
           </div>
           <div class="w-full h-0.5 bg-dark-300"></div>
         </div>
