--- a/src/app/modules/main/direct-page/direct-page.component.html
+++ b/src/app/modules/main/direct-page/direct-page.component.html
@@ -4,7 +4,7 @@
     <app-search-input
       placeholder="Anonymous Blobfish"
       name="identitySearch"
-      (onSearch)="searchIdentity($event)"
+      (searchChange)="searchIdentity($event)"
       class="w-full"
     >
     </app-search-input>
