--- a/src/app/shared/components/toast/toast.component.html
+++ b/src/app/shared/components/toast/toast.component.html
@@ -65,7 +65,7 @@
         </div>
         <div *ngIf="toast.content" class="text-basic">{{ toast.content }}</div>
       </div>
-      <button (click)="dismiss(toast.id as string)" class="flex flex-row items-start text-basic">
+      <button (click)="dismiss(toast.id!)" class="flex flex-row items-start text-basic">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
           <path fill="none" d="M0 0h24v24H0z" />
           <path
