Fixed modal buttons not showing

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -27,10 +27,10 @@
 
 <app-modal
   title="Inbox"
-  leftButton="Clear"
-  rightButton="Done"
-  (onLeftButton)="clearInbox($event)"
-  (onRightButton)="toggleInboxModal($event)"
+  leftButtonLabel="Clear"
+  rightButtonLabel="Done"
+  (leftButton)="clearInbox($event)"
+  (rightButton)="toggleInboxModal($event)"
   #inboxModal
 >
   <div class="w-full flex flex-col items-center gap-4 pb-12 text-light">
