Experimental change to fix view height

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-screen bg-dark">
+<div class="flex flex-col min-h-[100svh] bg-dark">
   <app-toast></app-toast>
   <app-popup></app-popup>
   <app-header></app-header>
