Fixed height issue on mobile

--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -1,4 +1,4 @@
-<div [id]="'container-' + id" class="fixed inset-0 w-full h-screen z-10 invisible">
+<div [id]="'container-' + id" class="fixed inset-0 w-full min-h-[100svh] z-10 invisible">
   <div
     [id]="'background-' + id"
     (click)="toggleModal($event)"
