--- a/src/app/shared/components/toast/toast.component.html
+++ b/src/app/shared/components/toast/toast.component.html
@@ -55,6 +55,7 @@
       </div>
       <div class="w-full flex flex-col justify-center">
         <div
+          class="break-words"
           [ngClass]="{
             'text-brand': toast.type === 'info',
             'text-emerald-600': toast.type === 'success',
@@ -63,7 +64,7 @@
         >
           {{ toast.title }}
         </div>
-        <div *ngIf="toast.content" class="text-basic">{{ toast.content }}</div>
+        <div *ngIf="toast.content" class="break-words text-basic">{{ toast.content }}</div>
       </div>
       <button (click)="dismiss(toast.id!)" class="flex flex-row items-start text-basic">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
