add linkify to make links clickable

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -46,7 +46,7 @@
               'text-basic-300': !transmission.message
             }"
           >
-            {{ transmission.message ? transmission.message! : transmission.fileOriginalName! }}
+            {{ transmission.message ? linkify(transmission.message!) : transmission.fileOriginalName! }}
           </div>
           <div class="text-sm text-basic">{{ transmission.receivedAt!.toLocaleTimeString() }}</div>
         </div>
